BPER/DEVF/force-app/main/default/objects/CRM_TurniPianificati__c/CRM_TurniPianificati__c.object-meta.xml
<CustomObject>
    <label>Turni Pianificati</label>
    <nameField>
        <displayFormat>T-{0000000}</displayFormat>
        <label>Turni Pianificati Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Turni Pianificati</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>