BPER/DEVF/force-app/main/default/objects/CRM_TurniPianificati__c/fields/CRM_Data__c.field-meta.xml
<CustomField>
    <fullName>CRM_Data__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data</label>
    <type>DateTime</type>
</CustomField>