BPER/DEVF/force-app/main/default/objects/CRM_TurniPianificati__c/fields/CRM_IDProfiloGiornaliero__c.field-meta.xml
<CustomField>
    <fullName>CRM_IDProfiloGiornaliero__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ID Profilo Giornaliero</label>
    <length>255</length>
    <type>Text</type>
</CustomField>