BPER/DEVF/force-app/main/default/objects/CRM_TurniPianificati__c/fields/CRM_Matricola__c.field-meta.xml
<CustomField>
    <fullName>CRM_Matricola__c</fullName>
    <formula>CRM_User__r.FederationIdentifier</formula>
    <label>Matricola</label>
    <type>Text</type>
</CustomField>