BPER/DEVF/force-app/main/default/objects/CRM_TurniPianificati__c/fields/CRM_User__c.field-meta.xml
<CustomField>
    <fullName>CRM_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TurniPianificati</relationshipName>
    <type>Lookup</type>
</CustomField>